--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('c:/Users/zores/Downloads/noelle-BK4rszchcE4-unsplash.jpg');
+            background-image: url('noelle-BK4rszchcE4-unsplash.jpg');
             background-size: cover;
             background-position: center;
         }
